Fixed an error with text aligning

--- a/WebContent/css/nhs.css
+++ b/WebContent/css/nhs.css
@@ -296,6 +296,7 @@ logo {
   font-family: "Raleway", sans-serif;
   font-size: 2rem;
   margin-bottom: 0;
+  text-align: left;
 }
 .headerH2 {
   font-size: 6rem;
